comp-transform/testsuite/good/EmptyCheckInFunc/EmptyCheckInFunc.hs
{-# LANGUAGE ComposableTypes #-}

module EmptyCheckInFunc where

d :: () => a -> a
d a = a
