comp-transform/testsuite/bad/CategoryInClass/CategoryInClass.hs
{-# LANGUAGE ComposableTypes #-}

module Main where

class Category a where
    piececategory StmtS
